- Removed the E_STRICT deprecation notice from "var". (Ilia)
- Fixed debug_zval_dump() to support private and protected members. (Dmitry)
- Fixed bug #36629 (SoapServer::handle() exits on SOAP faults). (Dmitry)
- Fixed bug #36697 (Transparency is lost when using imagecreatetruecolor).
 (Pierre)
- Fixed bug #36568 (memory_limit setting on win32 has no effect). (Dmitry)

09 Mar 2006, PHP 5.1.3RC1
- Updated PCRE to version 6.6. (Andrei)
- Moved extensions to PECL:
  . ext/msession (Derick)
- Reimplemented FastCGI interface. (Dmitry)
- Improved SPL: (Marcus)
  - Fixed issues with not/double calling of constructors of SPL iterators.
  - Fixed issues with info-class/file-class in SPL directory handling classes.
  - Fixed ArrayIterator::seek().
  - Added SimpleXMLIterator::count().
  - Dropped erroneous RecursiveDirectoryIterator::getSubPathInfo().
- Improved SimpleXML: (Marcus, Rob)
  . Added SimpleXMLElement::getName() to retrieve name of element.
  . Added ability to create elements on the fly.
  . Added addChild() method for element creation supporting namespaces.
  . Added addAttribute() method for attribute creation supporting namespaces.
  . Added ability to delete specific elements and attributes by offset.
- Improved Reflection API: (Marcus)
  . Added ReflectionClass::newInstanceArgs($args).
  . Added ability to analyze extension dependency.
  . Added ReflectionFunction::isDeprecated() and constant IS_DEPRECATED.
  . Added ReflectionParameter::getDeclaringClass().
  . Changed reflection constants to be prefixed with IS_. (Johannes)
- Improved cURL extension: (Ilia)
  . Added curl_setopt_array() function that allows setting of multiple options
    via an associated array.
  . Added the ability to retrieve the request message sent to the server.
- Improved GD extension: (Pierre)
  . Added a weak/tolerant mode to the JPEG loader.
  . Added filtering mode option to imagepng() to allow reducing file size.